tests/ui/standard-json/type-error/A.sol
//@ check-pass
contract A {
    function f() public pure {
        uint x = true;
    }
}
